fix overlfow hidden on mobile

--- a/assets/scss/utils/general.scss
+++ b/assets/scss/utils/general.scss
@@ -5,13 +5,18 @@
 }
 
 body {
-  overflow: hidden;
+  @include min(md) {
+    overflow: hidden;
+  }
 }
 
 #__nuxt, #__layout, #app {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  
+  @include min(md) {
+    overflow: hidden;
+  }
 }
 
 .page {
